--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,3 +1,5 @@
+name: Snk
+description: Does something
 - uses: Platane/snk@v2
   with:
     # github user name to read the contribution graph from (**required**)
